# elote

./: .buildinfo  .coverage.wills-air.home.55959.XuChoAVx  .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  MANIFEST.in  Makefile  README.md  advance_example.html  arenas.html  blog_posts.html  competitors.html  contributing.html  examples.html  genindex.html  getting_started.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  requirements-dev.txt  requirements.txt  search.html  searchindex.js  serialization.html  setup.cfg  setup.py  tox.ini
.doctrees/: advance_example.doctree  arenas.doctree  blog_posts.doctree  competitors.doctree  contributing.doctree  environment.pickle  examples.doctree  getting_started.doctree  index.doctree  installation.doctree  quickstart.doctree  serialization.doctree
_modules/: index.html
_sources/: advance_example.rst.txt  competitors.rst.txt  contributing.rst.txt  index.rst.txt  installation.rst.txt  quickstart.rst.txt  serialization.rst.txt
_static/: custom.css
api/: arenas.html  competitors.html
docs/: Makefile  requirements.txt
doctrees/: advance_example.doctree  arenas.doctree  blog_posts.doctree  changelog.doctree  competitors.doctree  contributing.doctree  environment.pickle  examples.doctree  getting_started.doctree  index.doctree  installation.doctree  quickstart.doctree  serialization.doctree
elote/: __init__.py  arenas.py  benchmark.py  competitors.py  logging.py  visualization.py
examples/: bout_with_initialization.py  bout_with_ties.py  bradley_terry_example.py  colley_matrix_comparison.py  colley_matrix_example.py  dataset_example.py  dwz_arena.py  ecf_arena.py  glicko2_example.py  glicko_arena.py  persist_state_arena.py  prediction.py  sample_arena.py  sample_bout.py  trueskill_example.py  trueskill_tournament.py
html/: .buildinfo  advance_example.html  arenas.html  blog_posts.html  changelog.html  competitors.html  contributing.html  examples.html  genindex.html  getting_started.html  index.html  installation.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js  serialization.html
rating_systems/: bradley_terry.html  colley.html  comparison.html  dwz.html  ecf.html  elo.html  ensemble.html  glicko.html  glicko2.html  trueskill.html
scripts/: run_benchmarks.py
tests/: test_Arenas.py  test_BlendedCompetitor.py  test_BradleyTerryCompetitor.py  test_BradleyTerryCompetitor_known_values.py  test_ColleyMatrixCompetitor.py  test_ColleyMatrixCompetitor_known_values.py  (+23 more)
(+123 files in other folders)
